# lib-sfm

./: .gitattributes  .gitignore  INSTALL.md  README.md
cpp/: CMakeLists.txt  README.md
cpp/src/: stereo_example.cpp
python/: README.md  stereo_example.py
